--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Advicers</title>
+  <title>Codeventors</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -37,7 +37,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">Advicers</a></h1>
+        <h1><a href="#intro" class="scrollto">Codeventors</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="img/logo.png" alt="" title=""></a> -->
       </div>
@@ -79,9 +79,9 @@
   <section id="intro">
 
     <div class="intro-text">
-      <h2>Bienvenido a Advicers</h2>
-      <p>We are team of talanted designers making websites with Bootstrap</p>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <h2>Bienvenido a Codeventors</h2>
+        <p>Nosotros somos una factoria de software</p>
+      <a href="#about" class="btn-get-started scrollto">Empezar</a>
     </div>
 
     <div class="product-screens">
@@ -110,7 +110,7 @@
     <section id="about" class="section-bg">
       <div class="container-fluid">
         <div class="section-header">
-          <h3 class="section-title">About Us</h3>
+          <h3 class="section-title">Nosotros</h3>
           <span class="section-divider"></span>
           <p class="section-description">
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque<br>
@@ -502,7 +502,7 @@
     <section id="team" class="section-bg">
       <div class="container">
         <div class="section-header">
-          <h3 class="section-title">Our Team</h3>
+          <h3 class="section-title">Nuestro equipo</h3>
           <span class="section-divider"></span>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
@@ -642,7 +642,7 @@
 
           <div class="col-lg-4 col-md-4">
             <div class="contact-about">
-              <h3>Avilon</h3>
+              <h3>Codeventors</h3>
               <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
               <div class="social-links">
                 <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -717,14 +717,14 @@
       <div class="row">
         <div class="col-lg-6 text-lg-left text-center">
           <div class="copyright">
-            &copy; Copyright <strong>Avilon</strong>. All Rights Reserved
+            &copy; Copyright <strong>Codeventors</strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
               You can delete the links only if you purchased the pro version.
               Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Avilon
+              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Codeventors
             -->
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
